# demo-auth

./: .dockerignore  .env.example  .gitignore  Dockerfile  HOW_TO_TEST.md  LICENSE  Makefile  README.md  docker-compose.yml  main.py  openapi_temp.json  openapi_test.json  pyproject.toml  requirements-dev.txt  requirements-production.txt  requirements.txt  run_example.py  setup.py  start_server.bat  start_server.sh  test_app.py  test_framework.py
.do/: app.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
adaptiveauth/: __init__.py  config.py  models.py  schemas.py
adaptiveauth/auth/: __init__.py  email.py  otp.py  service.py  sms.py
adaptiveauth/core/: __init__.py  database.py  dependencies.py  middleware.py  security.py
adaptiveauth/models/: feature_importances.json  feature_names.json  learned_weights.json  model_meta.json  rba_xgb_model.json
adaptiveauth/risk/: __init__.py  analyzer.py  biometrics.py  engine.py  factors.py  monitor.py
adaptiveauth/routers/: __init__.py  adaptive.py  admin.py  auth.py  risk.py  user.py
docs/: API_DOCUMENTATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION_GUIDE.md  PUBLISHING_GUIDE.md  SECURITY.md
mern-client/: index.js  package.json
mern-client/src/: index.d.ts
scripts/: deploy.bat  deploy.sh
static/: index.html
